# Rainb0w

./: README.md  notice.txt  pyproject.toml  requirements.txt  run.sh
Docker/: rainb0w_config.toml
Docker/caddy/: Dockerfile  docker-compose.yml
Docker/caddy/etc/: config.json
Docker/nginx/: docker-compose.yml
Docker/nginx/etc/: nginx.conf
Docker/nginx/templates/: user-share-links.html
Docker/sing-box/: docker-compose.yml
Docker/sing-box/etc/: sing-box.json
Docker/wordpress/: Dockerfile  bootstrap.sh  docker-compose.yml  install-wordpress.sh  wp.env
src/: configurator.py  dashboard.py
src/base/: config.py
src/proxy/: caddy.py  nginx.py  singbox.py
src/shell/: deploy.sh  uninstall.sh  update.sh
src/shell/base/: config.sh
src/shell/docker/: init_vol_net.sh  restart_all_containers.sh
src/shell/helper/: get_client_url.py  get_domain.py
src/shell/os/: install_certbot.sh  os_utils.sh  rebuild_xt_geoip_db.sh  xt_geoip_update.sh
src/shell/performance/: tune_kernel_net.sh
src/shell/security/: get_tls_certs.sh  setup_firewall.sh
src/user/: user_manager.py
src/utils/: cf_utils.py  helper.py  url_utils.py  website_utils.py  wp_utils.py
