[project]
name = "rainb0w"
version = "3.3"
description = "Sing-Box proxy installer"
authors = [
    { name = "Kyōchikutō | キョウチクトウ" }
]
dependencies = [
    "PyYAML",
    "bcrypt",
    "beautifulsoup4>=4.13.5",
    "pick",
    "psutil",
    "python-dotenv",
    "qrcode[pil]>=7.4.2",
    "requests",
    "rich",
    "toml",
]
readme = "README.md"
requires-python = ">= 3.8"

[tool.rye]
managed = true
virtual = true
dev-dependencies = []
